<resources>
    <string name="app_name">Novel Terlaris</string>
    <string name="pengarang">Pengarang</string>
    <string name="rank">rank</string>
    <string name="tahun_rilis">Tahun Rilis</string>
    <string name="detail">Detail</string>
    <string name="judul">Judul</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="pengarang_njudul">Pengarang\nJudul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="content_description">content_description</string>
    <string name="namaSaya">Ferdian Yuliansyah</string>
    <string name="emailSaya">ferdianyuliansyah19@gmail.com</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birth_day">Birth Day</string>
    <string name="_31_juli_2001">31 Juli 2001</string>
</resources>