<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detail_book">


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_judul_buku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul_buku"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/img_image_detail"
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="15dp"
            android:src="@color/dark_grey"/>

            <TextView
                android:id="@+id/tv_pengarang_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/pengarang"/>

        <TextView
            android:id="@+id/tv_tahun_rilis_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:text="@string/tahun_rilis" />

    </LinearLayout>

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="11dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/tv_deskripsi_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/content_description" />
        </androidx.cardview.widget.CardView>



</LinearLayout>


</ScrollView>